# bmad-autopilot

./: .gitignore  CONTRIBUTING.md  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: dev-wrapper.md  qa.md  review-bmad-wrapper.md  review-lad-wrapper.md
docs/: a11y-setup.md  architecture.md  extension-audit.md  git-hygiene.md  implementation-patterns.md  lad-setup.md  marker-coverage-audit.md  mobile-mcp-setup.md  mvp-completion-evidence.md  onboarding-benchmark.md  phase-1.5-completion-evidence.md  phase-2-completion-evidence.md  reference-projects.md  story-doc-upgrade-guidance.md  tea-boundary-contract.md  tea-vs-automator.md  visual-regression-setup.md
examples/: bmad-extension-audit-entry.md
hooks/: session-start.sh  stop.sh  subagent-stop.sh
schemas/: adoption-metrics.yaml  dependencies.yaml  envelope.schema.yaml  epic-run-state.yaml  marker-taxonomy.yaml  (+6 more)
tools/loud-fail-harness/: .coverage  pyproject.toml
tools/loud-fail-harness/docs/: hook-counting-rules.md
tools/loud-fail-harness/src/loud_fail_harness/: _shared.py  auto_merge_config.py  auto_merge_execution.py  auto_merge_gate.py  background_dispatch.py  branch_lifecycle.py  bundle_assembly.py  bundle_assembly_epic.py  bundle_assembly_escalation.py  bundle_assembly_failure.py  bundle_assembly_failure_emission_gate.py  config_qa_runbook_stub.py  cost_streaming.py  cost_telemetry.py  cross_state_recovery.py  dependencies_validator.py  done_story_review_ledger.py  done_story_review_ledger_gate.py  emissions_render_path_gate.py  enumeration_check.py  env_provisioning.py  envelope_validator.py  epic_lifecycle.py  epic_run_state.py  epic_status_command.py  event_streaming.py  event_validator.py  evidence_linkability.py  exceptions.py  fixture_coverage.py  flow_branch_coverage_gate.py  forward_pointer_drift.py  forward_pointer_drift_gate.py  four_layer_review_dispatch.py  fr33_fixture_gate.py  fr33_runtime_gate.py  hook_budget_gate.py  http_driver.py  init_non_destructive_guard.py  init_preconditions.py  (+62 more)
tools/loud-fail-harness/src/loud_fail_harness/_data/: config.yaml.template  emissions_render_surfaces.yaml  input_hardening_registry.yaml  marker_coverage_surfaces.yaml  qa-runbook.yaml.template  sample-auto-001.md
tools/loud-fail-harness/tests/: test_api_key_hygiene.py  test_auto_merge_config.py  test_auto_merge_execution.py  test_auto_merge_gate.py  test_background_dispatch.py  test_branch_lifecycle.py  test_bundle_assembly.py  test_bundle_assembly_epic.py  test_bundle_assembly_escalation.py  test_bundle_assembly_failure.py  test_bundle_assembly_failure_emission_gate.py  test_bundle_assembly_failure_fixture.py  test_bundle_assembly_failure_smoke.py  test_concurrent_env_provisioning.py  test_config_qa_runbook_stub.py  test_cost_streaming.py  test_cost_streaming_smoke.py  test_cost_telemetry.py  test_cost_telemetry_smoke.py  test_cross_state_recovery.py  test_dependencies_validator.py  test_dev_wrapper.py  test_done_story_review_ledger.py  test_done_story_review_ledger_gate.py  test_emissions_render_path_gate.py  test_enumeration_check.py  test_env_provisioning.py  test_envelope_validator.py  test_epic_14_substrate_smoke.py  test_epic_15_reference_run_fixture.py  test_epic_15_transient_marker_smoke.py  test_epic_16_reference_run_fixture.py  test_epic_18_reference_run_fixture.py  test_epic_21_background_reference_run_fixture.py  test_epic_lifecycle.py  test_epic_run_state.py  test_epic_status_command.py  test_escalation_bundle_contracts.py  test_event_streaming.py  test_event_validator.py  (+93 more)
tools/loud-fail-harness/tests/fixtures/: sample-story-retry-budget-exhaustion.md  sample-story-retry-patch-fix.md  sample-story-retry-scope-violation.md  sample-story-walking-skeleton.md
tools/loud-fail-harness/tests/fixtures/epic-run-state/: invalid-additional-property.yaml  invalid-current-state.yaml  valid-epic-complete.yaml  valid-epic-run-state.yaml  valid-paused-on-escalation.yaml
tools/loud-fail-harness/tests/fixtures/flow-branch-coverage/: README.md
tools/loud-fail-harness/tests/fixtures/flow-branch-coverage-failure-cases/dangling-outcome/: flow-branch-outcomes.yaml  qa-behavioral-plan.md
tools/loud-fail-harness/tests/fixtures/flow-branch-coverage-failure-cases/malformed-outcomes/: flow-branch-outcomes.yaml  qa-behavioral-plan.md
tools/loud-fail-harness/tests/fixtures/flow-branch-coverage-failure-cases/must-visit-undischarged/: flow-branch-outcomes.yaml  qa-behavioral-plan.md
tools/loud-fail-harness/tests/fixtures/flow-branch-coverage/clean/: flow-branch-outcomes.yaml  qa-behavioral-plan.md
tools/loud-fail-harness/tests/fixtures/init_preconditions/: dependencies-fixture-extended.yaml  dependencies-fixture-mobile-blocked.yaml  dependencies-fixture-shape-violation.yaml
tools/loud-fail-harness/tests/fixtures/install_path/: multiple-match-fixture.md  no-match-fixture.md  outcome-1-fixture.md  outcome-2-fixture.md  outcome-3-fixture.md
tools/loud-fail-harness/tests/fixtures/parallel-state-pollution/: clean-parallel-state.yaml  polluted-parallel-state.yaml
tools/loud-fail-harness/tests/fixtures/qa-runbook-heuristics/: README.md
tools/loud-fail-harness/tests/fixtures/qa-runbook-heuristics/invalid/: bad-enablement-value.yaml  flakiness-bad-knob.yaml  opt-out-unknown-name.yaml  unknown-heuristic-name.yaml  unknown-project-type.yaml
tools/loud-fail-harness/tests/fixtures/qa-runbook-heuristics/valid/: qa-runbook.yaml
tools/loud-fail-harness/tests/fixtures/runtime-captures/: README.md
tools/loud-fail-harness/tests/fixtures/runtime-captures-failure-cases/missing-emission/: events.jsonl  run-state.yaml
tools/loud-fail-harness/tests/fixtures/runtime-captures/clean/: events.jsonl  run-state.yaml
tools/loud-fail-harness/tests/fixtures/sprint-run-state/: invalid-additional-property.yaml  valid-sprint-complete.yaml  valid-sprint-paused-on-budget.yaml  valid-sprint-run-state.yaml
tools/loud-fail-harness/tests/fixtures/worktree-run-state/: invalid-missing-branch-name.yaml
tools/loud-fail-harness/tests/fixtures/worktree-run-state/14-4-epic-scope-run-state-schema/: run-state.yaml
(+237 files in other folders)
