[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loud-fail-harness"
version = "0.0.1"
description = "Loud-fail CI harness substrate (BMAD Agent Development Automator). Schema-not-yet-stabilized; see ADR-003."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.3,<3",
    "jsonschema>=4.26.0,<5",
    "pyyaml>=6,<7",
]

[project.scripts]
envelope-validator = "loud_fail_harness.envelope_validator:main"
event-validator = "loud_fail_harness.event_validator:main"
dependencies-validator = "loud_fail_harness.dependencies_validator:main"
enumeration-check = "loud_fail_harness.enumeration_check:main"
fixture-coverage = "loud_fail_harness.fixture_coverage:main"
fr33-fixture-gate = "loud_fail_harness.fr33_fixture_gate:main"
hook-budget-gate = "loud_fail_harness.hook_budget_gate:main"
pluggability-gate = "loud_fail_harness.pluggability_gate:main"
# story-doc-validator is a library-as-CLI-aid (story 1.10b; FR66 / NFR-S5),
# NOT a CI gate step — the library has no canonical filesystem surface to
# scan at MVP because story-doc writes happen at specialist runtime in
# Epic 2+, not as committed filesystem artifacts. CI enforcement is the
# test suite (`uv run pytest tests/test_story_doc_validator.py`) plus the
# existing `enumeration_check` (story 1.5) verifying the marker class is
# in `schemas/marker-taxonomy.yaml`. Placed after `pluggability-gate` to
# preserve the gate-execution-order grouping, then library-as-CLI-aid
# grouping.
story-doc-validator = "loud_fail_harness.story_doc_validator:main"
# naming-lint (story 1.12b; Pattern 1 + Pattern 2 enforcement matrix per
# architecture.md lines 1031-1032) is a CI gate, listed last here because all
# prior [project.scripts] entries already existed at this story's landing time.
# The position in this table does NOT reflect CI execution order — the CI step
# runs between `dependencies-validator` and `enumeration-check`, as encoded in
# .github/workflows/ci.yml.
naming-lint = "loud_fail_harness.naming_lint:main"
# review-layer-failure-emission-gate (story 3.3 AC-9; FR28 + FR56) is a
# CI gate enforcing the three-channel atomic-emission code-structure
# invariant: surface_failed_layers is the SINGLE source-of-truth emission
# path for the failed_layers envelope field, the review-layer-failed
# marker class, and the meta: review-completeness synthetic-finding
# discriminator. Listed last because all prior entries pre-date Story 3.3.
review-layer-failure-emission-gate = "loud_fail_harness.review_layer_failure_emission_gate:main"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "mypy>=1.18",
    "pytest>=8.4",
    "pytest-cov>=5",
    "types-pyyaml>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loud_fail_harness"]

# Pattern 6 — Python code style. See docs/implementation-patterns.md#pattern-6-python-code-style.
[tool.ruff]
target-version = "py312"
line-length = 100

# Pattern 6 — Python code style. See docs/implementation-patterns.md#pattern-6-python-code-style.
# Explicit `select` makes the chosen rule families a project-wide style decision
# rather than implicit-via-default (story 1.12b AC-4). Covers the full
# pycodestyle errors family (E), pycodestyle warnings (W), and Pyflakes (F).
# E501 (line-too-long) is suppressed via `ignore` because line-length
# enforcement is the `[tool.ruff.format]` formatter's responsibility (line-
# length = 100 above); a linter E501 check on top would fire on existing
# docstring-heavy modules that AC-9 forbids touching in this story's scope.
# This is a project-level decision, not per-file suppression.
# Extending the set (I, UP, B, RUF) requires the existing harness modules to
# remain ruff-clean post-PR per AC-4 — fix-where-fixed in the same PR rather
# than baseline-suppression via `noqa` or `per-file-ignores`.
[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [
    # E501 line-too-long: formatter's responsibility via [tool.ruff.format]
    # + line-length = 100 in [tool.ruff]. Project-level decision; not per-file.
    "E501",
]

# Pattern 6 — Python code style. See docs/implementation-patterns.md#pattern-6-python-code-style.
# Section's presence makes "use Ruff's formatter with project-line-length defaults"
# an explicit choice (story 1.12b AC-4) rather than absent-by-default; future
# explicit formatter settings (quote-style, indent-style, etc.) land here.
[tool.ruff.format]

# Pattern 6 — Python code style. Strict mode intentionally OFF at MVP per
# CLAUDE.md ("mypy strict mode is off for the empty scaffold; per-component
# strictness lands incrementally"). Per-component strictness via
# [[tool.mypy.overrides]] entries lands as new modules opt-in. See
# docs/implementation-patterns.md#pattern-6-python-code-style.
[tool.mypy]
python_version = "3.12"
files = ["src"]

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.exceptions"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "performance: marks tests as performance benchmarks (can be excluded with -m 'not performance')",
]
