[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loud-fail-harness"
version = "0.0.1"
description = "Loud-fail CI harness substrate (BMAD Agent Development Automator). Schema-not-yet-stabilized; see ADR-003."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.3,<3",
    "jsonschema>=4.26.0,<5",
    "pyyaml>=6,<7",
    # Story 7.2 (AC-4) — round-trip-safe YAML for `_bmad/automation/config.yaml`
    # writes by `loud_fail_harness.install_path.record_install_method`. The
    # config carries hand-edited customizations that survive across re-installs
    # (FR42); plain PyYAML loses comments + key order on round-trip.
    "ruamel.yaml>=0.18,<1",
    # Story 7.3 (AC-3) — semver comparison for total-block init precondition
    # checks (`packaging.version.Version`) when a dependency declares a
    # numeric `version_floor` (e.g., claude-code "2.1.32", bmad-core "6.0").
    # Free-text version_floor entries (e.g., "officially-supported-as-of-mvp-
    # release", "version-agnostic; detected at init") skip version comparison
    # and treat probe `available: True` as the success condition.
    "packaging>=24,<27",
]

[project.scripts]
envelope-validator = "loud_fail_harness.envelope_validator:main"
event-validator = "loud_fail_harness.event_validator:main"
dependencies-validator = "loud_fail_harness.dependencies_validator:main"
enumeration-check = "loud_fail_harness.enumeration_check:main"
fixture-coverage = "loud_fail_harness.fixture_coverage:main"
fr33-fixture-gate = "loud_fail_harness.fr33_fixture_gate:main"
fr33-runtime-gate = "loud_fail_harness.fr33_runtime_gate:main"
hook-budget-gate = "loud_fail_harness.hook_budget_gate:main"
pluggability-gate = "loud_fail_harness.pluggability_gate:main"
# story-doc-validator is a library-as-CLI-aid (story 1.10b; FR66 / NFR-S5),
# NOT a CI gate step — the library has no canonical filesystem surface to
# scan at MVP because story-doc writes happen at specialist runtime in
# Epic 2+, not as committed filesystem artifacts. CI enforcement is the
# test suite (`uv run pytest tests/test_story_doc_validator.py`) plus the
# existing `enumeration_check` (story 1.5) verifying the marker class is
# in `schemas/marker-taxonomy.yaml`. Placed after `pluggability-gate` to
# preserve the gate-execution-order grouping, then library-as-CLI-aid
# grouping.
story-doc-validator = "loud_fail_harness.story_doc_validator:main"
# naming-lint (story 1.12b; Pattern 1 + Pattern 2 enforcement matrix per
# architecture.md lines 1031-1032) is a CI gate, listed last here because all
# prior [project.scripts] entries already existed at this story's landing time.
# The position in this table does NOT reflect CI execution order — the CI step
# runs between `dependencies-validator` and `enumeration-check`, as encoded in
# .github/workflows/ci.yml.
naming-lint = "loud_fail_harness.naming_lint:main"
# review-layer-failure-emission-gate (story 3.3 AC-9; FR28 + FR56) is a
# CI gate enforcing the three-channel atomic-emission code-structure
# invariant: surface_failed_layers is the SINGLE source-of-truth emission
# path for the failed_layers envelope field, the review-layer-failed
# marker class, and the meta: review-completeness synthetic-finding
# discriminator. Listed last because all prior entries pre-date Story 3.3.
review-layer-failure-emission-gate = "loud_fail_harness.review_layer_failure_emission_gate:main"
# bundle-assembly-failure-emission-gate (story 6.9 AC-4; FR59 + NFR-O5) is a
# CI gate enforcing the three-channel atomic-emission code-structure invariant
# for the `bundle-assembly-failed` marker class. surface_assembly_failure is
# the SINGLE source-of-truth emission path for the fallback diagnostic file,
# the stderr line, and the persisted run-state marker. Mirrors Story 3.3's
# review-layer-failure-emission-gate byte-for-byte in shape; ordered after it
# to preserve the emission-gate landing-order grouping.
bundle-assembly-failure-emission-gate = "loud_fail_harness.bundle_assembly_failure_emission_gate:main"
# marker-coverage-audit (story 6.3; FR30 + FR33 + Pattern 5) is library-as-CLI-aid,
# NOT a CI gate at this story's landing — invoked manually at epic close OR by
# future contributors when extending coverage. Mirrors `story-doc-validator`
# posture per pyproject.toml lines 25-32. CI gating is forward-scoped.
marker-coverage-audit = "loud_fail_harness.marker_coverage_audit:main"
# onboarding-benchmark (story 7.9; FR44 + NFR-P3) is library-as-CLI-aid invoked
# from .github/workflows/release-benchmark.yml on release branches and tags
# ONLY (NOT a per-PR CI gate per AC-5: release-cadence cost-vs-coverage
# tradeoff). Mirrors marker-coverage-audit's posture per pyproject.toml lines
# 70-74.
onboarding-benchmark = "loud_fail_harness.onboarding_benchmark:main"
# session-start-reattach (Story 8.1) — invoked by hooks/session-start.sh.
# Implements SessionStart reattachment + schema-version handling per FR46;
# emits recovery-state-conflict marker on prior-version run-state files.
# See src/loud_fail_harness/session_start_reattach.py for the substrate.
session-start-reattach = "loud_fail_harness.session_start_reattach:main"
# cross-state-recovery (Story 8.2) — invoked by /bmad-automation resume (Story 8.3, when landed).
# Implements ADR-005 Reading-3 cross-state consistency recovery algorithm per NFR-R8;
# emits recovery-state-conflict marker when reconciliation cannot complete cleanly.
# See src/loud_fail_harness/cross_state_recovery.py for the substrate.
cross-state-recovery = "loud_fail_harness.cross_state_recovery:main"
# bmad-automation-resume (Story 8.3) — invoked by /bmad-automation resume <story-id>'s orchestrator-skill step.
# Composes Story 8.2's cross_state_recovery.evaluate_recovery + the lifecycle-state-to-specialist map for
# next-specialist determination. Halts on no-in-flight-run OR recovery-state-conflict; otherwise advances to the
# next undetermined seam in the story loop per FR47.
# See src/loud_fail_harness/resume_command.py for the substrate.
bmad-automation-resume = "loud_fail_harness.resume_command:main"
# bmad-automation-status (Story 8.4) — invoked by /bmad-automation status <story-id>'s orchestrator-skill step.
# Read-only single-story inspection per FR48 + NFR-O4. Loads run-state via Story 8.2's _load_run_state_from_disk
# helper (private import per Story 8.3's Dev's-call precedent), resolves retry rounds via Story 5.5's
# retry_history.resolve_retry_round, projects per-specialist log dir via Story 2.6's LOG_PATH_TEMPLATE.
# See src/loud_fail_harness/status_command.py for the substrate.
bmad-automation-status = "loud_fail_harness.status_command:main"
scope-assertion-verify = "loud_fail_harness.scope_assertion:_main"
retry-history-resolve = "loud_fail_harness.retry_history:_main"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "mypy>=1.18",
    "pytest>=8.4",
    "pytest-cov>=5",
    "types-pyyaml>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loud_fail_harness"]

# Pattern 6 — Python code style. See docs/implementation-patterns.md#pattern-6-python-code-style.
[tool.ruff]
target-version = "py312"
line-length = 100

# Pattern 6 — Python code style. See docs/implementation-patterns.md#pattern-6-python-code-style.
# Explicit `select` makes the chosen rule families a project-wide style decision
# rather than implicit-via-default (story 1.12b AC-4). Covers the full
# pycodestyle errors family (E), pycodestyle warnings (W), and Pyflakes (F).
# E501 (line-too-long) is suppressed via `ignore` because line-length
# enforcement is the `[tool.ruff.format]` formatter's responsibility (line-
# length = 100 above); a linter E501 check on top would fire on existing
# docstring-heavy modules that AC-9 forbids touching in this story's scope.
# This is a project-level decision, not per-file suppression.
# Extending the set (I, UP, B, RUF) requires the existing harness modules to
# remain ruff-clean post-PR per AC-4 — fix-where-fixed in the same PR rather
# than baseline-suppression via `noqa` or `per-file-ignores`.
[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [
    # E501 line-too-long: formatter's responsibility via [tool.ruff.format]
    # + line-length = 100 in [tool.ruff]. Project-level decision; not per-file.
    "E501",
]

# Pattern 6 — Python code style. See docs/implementation-patterns.md#pattern-6-python-code-style.
# Section's presence makes "use Ruff's formatter with project-line-length defaults"
# an explicit choice (story 1.12b AC-4) rather than absent-by-default; future
# explicit formatter settings (quote-style, indent-style, etc.) land here.
[tool.ruff.format]

# Pattern 6 — Python code style. Strict mode intentionally OFF at MVP per
# CLAUDE.md ("mypy strict mode is off for the empty scaffold; per-component
# strictness lands incrementally"). Per-component strictness via
# [[tool.mypy.overrides]] entries lands as new modules opt-in. See
# docs/implementation-patterns.md#pattern-6-python-code-style.
[tool.mypy]
python_version = "3.12"
files = ["src"]

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.exceptions"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "performance: marks tests as performance benchmarks (can be excluded with -m 'not performance')",
]
