[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loud-fail-harness"
version = "0.0.1"
description = "Loud-fail CI harness substrate (BMAD Agent Development Automator). Schema-not-yet-stabilized; see ADR-003."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.3,<3",
    "jsonschema>=4.26.0,<5",
    "pyyaml>=6,<7",
    # Story 7.2 (AC-4) — round-trip-safe YAML for `_bmad/automation/config.yaml`
    # writes by `loud_fail_harness.install_path.record_install_method`. The
    # config carries hand-edited customizations that survive across re-installs
    # (FR42); plain PyYAML loses comments + key order on round-trip.
    "ruamel.yaml>=0.18,<1",
    # Story 7.3 (AC-3) — semver comparison for total-block init precondition
    # checks (`packaging.version.Version`) when a dependency declares a
    # numeric `version_floor` (e.g., claude-code "2.1.32", bmad-core "6.0").
    # Free-text version_floor entries (e.g., "officially-supported-as-of-mvp-
    # release", "version-agnostic; detected at init") skip version comparison
    # and treat probe `available: True` as the success condition.
    "packaging>=24,<27",
]

[project.scripts]
envelope-validator = "loud_fail_harness.envelope_validator:main"
event-validator = "loud_fail_harness.event_validator:main"
dependencies-validator = "loud_fail_harness.dependencies_validator:main"
enumeration-check = "loud_fail_harness.enumeration_check:main"
fixture-coverage = "loud_fail_harness.fixture_coverage:main"
fr33-fixture-gate = "loud_fail_harness.fr33_fixture_gate:main"
fr33-runtime-gate = "loud_fail_harness.fr33_runtime_gate:main"
hook-budget-gate = "loud_fail_harness.hook_budget_gate:main"
pluggability-gate = "loud_fail_harness.pluggability_gate:main"
# story-doc-validator is a library-as-CLI-aid (story 1.10b; FR66 / NFR-S5),
# NOT a CI gate step — the library has no canonical filesystem surface to
# scan at MVP because story-doc writes happen at specialist runtime in
# Epic 2+, not as committed filesystem artifacts. CI enforcement is the
# test suite (`uv run pytest tests/test_story_doc_validator.py`) plus the
# existing `enumeration_check` (story 1.5) verifying the marker class is
# in `schemas/marker-taxonomy.yaml`. Placed after `pluggability-gate` to
# preserve the gate-execution-order grouping, then library-as-CLI-aid
# grouping.
story-doc-validator = "loud_fail_harness.story_doc_validator:main"
# naming-lint (story 1.12b; Pattern 1 + Pattern 2 enforcement matrix per
# architecture.md lines 1031-1032) is a CI gate, listed last here because all
# prior [project.scripts] entries already existed at this story's landing time.
# The position in this table does NOT reflect CI execution order — the CI step
# runs between `dependencies-validator` and `enumeration-check`, as encoded in
# .github/workflows/ci.yml.
naming-lint = "loud_fail_harness.naming_lint:main"
# review-layer-failure-emission-gate (story 3.3 AC-9; FR28 + FR56) is a
# CI gate enforcing the three-channel atomic-emission code-structure
# invariant: surface_failed_layers is the SINGLE source-of-truth emission
# path for the failed_layers envelope field, the review-layer-failed
# marker class, and the meta: review-completeness synthetic-finding
# discriminator. Listed last because all prior entries pre-date Story 3.3.
review-layer-failure-emission-gate = "loud_fail_harness.review_layer_failure_emission_gate:main"
# bundle-assembly-failure-emission-gate (story 6.9 AC-4; FR59 + NFR-O5) is a
# CI gate enforcing the three-channel atomic-emission code-structure invariant
# for the `bundle-assembly-failed` marker class. surface_assembly_failure is
# the SINGLE source-of-truth emission path for the fallback diagnostic file,
# the stderr line, and the persisted run-state marker. Mirrors Story 3.3's
# review-layer-failure-emission-gate byte-for-byte in shape; ordered after it
# to preserve the emission-gate landing-order grouping.
bundle-assembly-failure-emission-gate = "loud_fail_harness.bundle_assembly_failure_emission_gate:main"
# marker-coverage-audit (story 6.3; FR30 + FR33 + Pattern 5) is library-as-CLI-aid,
# NOT a CI gate at this story's landing — invoked manually at epic close OR by
# future contributors when extending coverage. Mirrors `story-doc-validator`
# posture per pyproject.toml lines 25-32. CI gating is forward-scoped.
marker-coverage-audit = "loud_fail_harness.marker_coverage_audit:main"
# mvp-completion-evidence (story 8.7; FR1-FR66 + 34 NFRs + Pattern 5/6) is
# library-as-CLI-aid invoked from .github/workflows/ci.yml as the Step 4
# final-validation hook per epics.md:3444 — the gate that blocks Epic 8's
# `done` transition until MVP gaps are remediated. Mirrors marker-coverage-
# audit's posture per pyproject.toml lines 70-74 (audit-against-closed-
# enumeration); placed AFTER marker-coverage-audit per Story 8.7 AC-8.
mvp-completion-evidence = "loud_fail_harness.mvp_completion_evidence:main"
# phase-1-5-completion-evidence (story 11.1; FR-P1.5-1/2 + Phase 1.5 NFR
# extensions + Phase 1.5-touched MVP FRs + Pattern 5/6) is library-as-CLI-aid
# invoked from .github/workflows/ci.yml as the Phase-1.5 release-readiness
# gate per Story 11.1 AC-8 — the gate that blocks Epic 11's `done`
# transition until Phase 1.5 gaps are remediated. Sibling, not replacement
# of mvp-completion-evidence — both gates run side-by-side; this gate
# enforces Phase-1.5-additive coverage (11 closed rows) while the Phase 1
# gate continues to enforce MVP coverage (102 closed rows). Mirrors
# mvp-completion-evidence byte-for-byte in shape (kebab name uses dashes
# between major + minor version components; module path uses underscores
# per Python identifier rules). Placed AFTER mvp-completion-evidence to
# preserve the release-evidence locality grouping.
phase-1-5-completion-evidence = "loud_fail_harness.phase_1_5_completion_evidence:main"
# onboarding-benchmark (story 7.9; FR44 + NFR-P3) is library-as-CLI-aid invoked
# from .github/workflows/release-benchmark.yml on release branches and tags
# ONLY (NOT a per-PR CI gate per AC-5: release-cadence cost-vs-coverage
# tradeoff). Mirrors marker-coverage-audit's posture per pyproject.toml lines
# 70-74.
onboarding-benchmark = "loud_fail_harness.onboarding_benchmark:main"
# session-start-reattach (Story 8.1) — invoked by hooks/session-start.sh.
# Implements SessionStart reattachment + schema-version handling per FR46;
# emits recovery-state-conflict marker on prior-version run-state files.
# See src/loud_fail_harness/session_start_reattach.py for the substrate.
session-start-reattach = "loud_fail_harness.session_start_reattach:main"
# cross-state-recovery (Story 8.2) — invoked by /bmad-automation resume (Story 8.3, when landed).
# Implements ADR-005 Reading-3 cross-state consistency recovery algorithm per NFR-R8;
# emits recovery-state-conflict marker when reconciliation cannot complete cleanly.
# See src/loud_fail_harness/cross_state_recovery.py for the substrate.
cross-state-recovery = "loud_fail_harness.cross_state_recovery:main"
# bmad-automation-resume (Story 8.3) — invoked by /bmad-automation resume <story-id>'s orchestrator-skill step.
# Composes Story 8.2's cross_state_recovery.evaluate_recovery + the lifecycle-state-to-specialist map for
# next-specialist determination. Halts on no-in-flight-run OR recovery-state-conflict; otherwise advances to the
# next undetermined seam in the story loop per FR47.
# See src/loud_fail_harness/resume_command.py for the substrate.
bmad-automation-resume = "loud_fail_harness.resume_command:main"
# bmad-automation-status (Story 8.4) — invoked by /bmad-automation status <story-id>'s orchestrator-skill step.
# Read-only single-story inspection per FR48 + NFR-O4. Loads run-state via Story 8.2's _load_run_state_from_disk
# helper (private import per Story 8.3's Dev's-call precedent), resolves retry rounds via Story 5.5's
# retry_history.resolve_retry_round, projects per-specialist log dir via Story 2.6's LOG_PATH_TEMPLATE.
# See src/loud_fail_harness/status_command.py for the substrate.
bmad-automation-status = "loud_fail_harness.status_command:main"
# bmad-automation-status-list (Story 8.5) — invoked by /bmad-automation status (no-args)'s
# orchestrator-skill step. Multi-story enumeration with orphan-run-state-detected marker
# emission per FR48b. Projects Story 8.4's status_command.inspect_story per enumerated
# story-id; emits orphan markers for run-state entries whose story-doc is missing.
# See src/loud_fail_harness/multi_story_status.py for the substrate.
bmad-automation-status-list = "loud_fail_harness.multi_story_status:main"
# bmad-automation-status-epic (Story 15.4) — invoked by /bmad-automation status --epic <epic-id>'s
# orchestrator-skill step. Read-only EPIC-scope inspection per FR48 + NFR-O4 (zero write surface).
# Loads the epic-run-state cache via epic_run_state.load_epic_run_state; projects Story 8.4's
# status_command.inspect_story per contained story for per-story marker presence (NFR-R8 — no fourth
# canonical store); computes the epic-PR-bundle pointer via bundle_assembly_epic.compute_epic_bundle_path.
# Halts on no-epic-run-state / epic-id-mismatch with a named-invariant diagnostic (NOT a marker).
# See src/loud_fail_harness/epic_status_command.py for the substrate.
bmad-automation-status-epic = "loud_fail_harness.epic_status_command:main"
# bmad-automation-status-sprint (Story 16.4) — invoked by /bmad-automation status --sprint <sprint-id>'s
# orchestrator-skill step. Read-only SPRINT-scope inspection per FR48 + NFR-O4 (zero write surface).
# REUSES Story 16.3's sprint_status_artifact.build_sprint_status_artifact aggregate read (the sprint-state-tree
# rollup over the sprint-run-state cache + each per-epic EpicRunState cache) and renders the returned model to
# stdout — it does NOT re-walk the caches and does NOT write the .md artifact (that is 16.3's assemble_* at sprint
# close). Per-story marker drill-down is POINTED TO (status --epic / status <story-id>), not re-projected at sprint
# scale (NFR-R8). Halts on no-sprint-run-state / sprint-id-mismatch with a named-invariant diagnostic (NOT a marker).
# See src/loud_fail_harness/sprint_status_command.py for the substrate.
bmad-automation-status-sprint = "loud_fail_harness.sprint_status_command:main"
# no-destructive-resume-guard (Story 8.6) — library-as-CLI-aid for ad-hoc
# Verdict inspection. Mirrors marker-coverage-audit's posture per pyproject.toml
# lines 70-74 (NOT a CI gate — invoked manually by practitioners debugging
# a deny verdict). The canonical substrate is the can_dispatch() function
# consumed by Stories 8.1 / 8.2 / 8.3 per epics.md:3384-3387.
# See src/loud_fail_harness/no_destructive_resume_guard.py for the substrate.
no-destructive-resume-guard = "loud_fail_harness.no_destructive_resume_guard:main"
# no-destructive-resume-lint (Story 8.6) — CI gate enforcing the consumption
# pattern across Stories 8.1 / 8.2 / 8.3 per epics.md:3389-3393. Parallel in
# shape to pluggability-gate; AST-based instead of regex-based since governed
# modules are Python source not markdown. Three structural rules: A-import-missing,
# B-callsite-missing, C-inline-reintroduced.
# See src/loud_fail_harness/no_destructive_resume_lint.py for the gate.
no-destructive-resume-lint = "loud_fail_harness.no_destructive_resume_lint:main"
scope-assertion-verify = "loud_fail_harness.scope_assertion:_main"
retry-history-resolve = "loud_fail_harness.retry_history:_main"
# flow-branch-coverage-gate (Story 13.5; FR22c) is a CI gate enforcing the
# within-AC flow-branch coverage contract: per AC and per enumerated flow
# branch, every must-visit branch is discharged by recorded per-branch
# evidence and every intentionally-skipped branch by a taxonomy-reconciling
# heuristic-skipped: flow-branch-<id> marker. Mirrors the Story 1.7/1.8
# fixture-driven-gate pattern (fixture_coverage + fr33_fixture_gate). Listed
# LAST because all prior [project.scripts] entries pre-date this story; the
# position in this table does NOT reflect CI execution order — the CI step
# runs last in .github/workflows/ci.yml.
flow-branch-coverage-gate = "loud_fail_harness.flow_branch_coverage_gate:main"
# sprint-status-artifact-validator (Story 16.3; FR-P2-2) is a library-as-CLI-aid,
# NOT a CI gate step — same posture + rationale as `story-doc-validator`
# (pyproject.toml lines 25-32) and `marker-coverage-audit`: the sprint-status
# artifact is a RUNTIME-emitted artifact (written at sprint close in a user
# project), not a committed filesystem surface the harness CI can scan. CI
# enforcement is the test suite (`uv run pytest tests/test_sprint_status_artifact_validator.py`)
# plus the closed-model/closed-schema construction guarantee. `--data <path.yaml>`
# schema-validates the structured artifact data (additionalProperties:false
# rejects subjective fields); `--artifact <path.md>` scans rendered markdown
# headings against the subjective-heading denylist. The assembler itself
# (`sprint_status_artifact`) takes NO console entry — it is invoked via
# `python3 -m loud_fail_harness.sprint_status_artifact` at sprint close, mirroring
# `bundle_assembly_epic`'s `python3 -m` boundary one scope down. Listed LAST
# because all prior [project.scripts] entries pre-date this story; the position
# does NOT reflect CI execution order.
sprint-status-artifact-validator = "loud_fail_harness.sprint_status_artifact_validator:main"
# input-hardening-gate (Story 24.2; Epic 24 Action #2) is a CI GATE (NOT a
# library-as-CLI-aid): it scans the committed src/loud_fail_harness/ tree on
# every PR/push, so it has a canonical filesystem surface unlike
# story-doc-validator / marker-coverage-audit. Enforces the closed
# model-classification registry (Rule A), per-field hardening coverage (Rule B),
# and the ValidationError catch-boundary (Rule C) that codify the
# 13→14→15→16→18 input-hardening recurrence as a build-time guarantee. It is a
# sibling library + lint, NOT a 6th substrate component (ADR-003 FIVE-component
# lock holds — precedent: naming-lint / pluggability-gate / no-destructive-
# resume-lint), and emits NO runtime marker (build-time gate). Listed LAST
# because all prior [project.scripts] entries pre-date this story; the position
# in this table does NOT reflect CI execution order — the CI step runs after
# no-destructive-resume-lint in .github/workflows/ci.yml.
input-hardening-gate = "loud_fail_harness.input_hardening_gate:main"
# done-story-review-ledger-gate (Story 24.3; Epic 24 Action #3) is a CI GATE
# in shape (LintFinding/LintResult/main exit 0/1/2, mirroring no-destructive-
# resume-lint), but is exercised in inner CI via pytest over fixtures rather
# than a dedicated ci.yml step — the governed surface is a target workspace's
# `_bmad-output/implementation-artifacts/` story docs, which are NOT present in
# the inner-repo CI working-directory (tools/loud-fail-harness). Same posture
# as story-doc-validator (pyproject.toml lines 38-46): no canonical filesystem
# surface to scan inside the harness, so its real teeth are a Dev/SM-invoked
# `uv run done-story-review-ledger-gate --sprint-status … --artifacts-dir …`.
# Joins sprint-status `done` status × story-doc `### Review Findings`
# checkboxes; codifies the 18.3 traceability drift. Sibling library + lint, NOT
# a 6th substrate component (ADR-003 FIVE-component lock holds — precedent:
# naming-lint / pluggability-gate / no-destructive-resume-lint), and emits NO
# runtime marker (build-time gate; closed-set stays 34, schema_version "1.12").
# Listed LAST because all prior [project.scripts] entries pre-date this story;
# the position in this table does NOT reflect CI execution order.
done-story-review-ledger-gate = "loud_fail_harness.done_story_review_ledger_gate:main"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "mypy>=1.18",
    "pytest>=8.4",
    "pytest-cov>=5",
    "types-pyyaml>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loud_fail_harness"]

# Pattern 6 — Python code style. See docs/implementation-patterns.md#pattern-6-python-code-style.
[tool.ruff]
target-version = "py312"
line-length = 100

# Pattern 6 — Python code style. See docs/implementation-patterns.md#pattern-6-python-code-style.
# Explicit `select` makes the chosen rule families a project-wide style decision
# rather than implicit-via-default (story 1.12b AC-4). Covers the full
# pycodestyle errors family (E), pycodestyle warnings (W), and Pyflakes (F).
# E501 (line-too-long) is suppressed via `ignore` because line-length
# enforcement is the `[tool.ruff.format]` formatter's responsibility (line-
# length = 100 above); a linter E501 check on top would fire on existing
# docstring-heavy modules that AC-9 forbids touching in this story's scope.
# This is a project-level decision, not per-file suppression.
# Extending the set (I, UP, B, RUF) requires the existing harness modules to
# remain ruff-clean post-PR per AC-4 — fix-where-fixed in the same PR rather
# than baseline-suppression via `noqa` or `per-file-ignores`.
[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = [
    # E501 line-too-long: formatter's responsibility via [tool.ruff.format]
    # + line-length = 100 in [tool.ruff]. Project-level decision; not per-file.
    "E501",
]

# Pattern 6 — Python code style. See docs/implementation-patterns.md#pattern-6-python-code-style.
# Section's presence makes "use Ruff's formatter with project-line-length defaults"
# an explicit choice (story 1.12b AC-4) rather than absent-by-default; future
# explicit formatter settings (quote-style, indent-style, etc.) land here.
[tool.ruff.format]

# Pattern 6 — Python code style. Strict mode intentionally OFF at MVP per
# CLAUDE.md ("mypy strict mode is off for the empty scaffold; per-component
# strictness lands incrementally"). Per-component strictness via
# [[tool.mypy.overrides]] entries lands as new modules opt-in. See
# docs/implementation-patterns.md#pattern-6-python-code-style.
[tool.mypy]
python_version = "3.12"
files = ["src"]

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.exceptions"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "performance: marks tests as performance benchmarks (can be excluded with -m 'not performance')",
]
